--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,7 +1,7 @@
 <% @post_images.each do |post_image| %>
 <div>
-  <%= attachment_image_tag post_image, iamge %>
-  <p>投稿ユーザ画像:<%= image_tag('sample-authorl.jpg') %></p>
+  <%= attachment_image_tag post_image, :image %>
+  <p>投稿ユーザ画像:<%= image_tag('sample-author1.jpg') %></p>
   <p>ショップ名:<%= post_image.shop_name %></p>
   <p>説明:<%= post_image.caption %></p>
   <p>ユーザネーム:<%= post_image.user.name %></p>
