--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -1,7 +1,7 @@
 <h1>画像投稿フォーム</h1>
 <% if @post_image.errors.any? %>
   <%= @post_image.errors.count %>件のエラーが発生しました
-  <% @post_image.errors.full_message.each do |message| %>
+  <% @post_image.errors.full_messages.each do |message| %>
     <%= message %>
   <% end %>
 <% end %>
